--- a/web/src/App.css
+++ b/web/src/App.css
@@ -65,6 +65,10 @@
   white-space: pre-wrap;
 }
 
+.snippet-textarea {
+  height: 10vh;
+}
+
 .quick-add-form {
   display: flex;
   flex-direction: column;
